--- a/res.html
+++ b/res.html
@@ -57,6 +57,7 @@ img{
         margin-left: 50px;
     }
     img{
+        margin-left: 40px;
         margin-top: 50px;
         width: 80%;
     }
