--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     Selected To State level & ISRO Space Station.</li>   
 
                 <li>VG-(Virtual Garden) This is a One of mini Garden in your mobile phones
-                    Link 🔗: https://gowri0016.github.io/index/</li>
+                    Link 🔗: <a href="https://gowri0016.github.io/index/">https://gowri0016.github.io/index/</a></li>
                 
                 <li>GP-Updates This is a One of E-comers  &  Co-comers in your mobile phones
-                    Link 🔗: https://gowri0016.github.io/Tronix_VG/</li>
+                    Link 🔗: <a href=" https://gowri0016.github.io/Tronix_VG/">https://gowri0016.github.io/Tronix_VG/</a> </li>
                 </ul>
             
         </div>
